<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_video_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.chalilayang.mediaextractordemo.VideoEditActivity"
    tools:showIn="@layout/activity_video_edit">
    <TextView
        android:id="@+id/video_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/video_edit_name"
        android:textSize="@dimen/general_small_text_size"/>
    <TextView
        android:id="@+id/video_edit_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/video_edit_name"
        android:text="@string/video_edit_duration"
        android:textSize="@dimen/general_small_text_size"/>
    <TextView
        android:id="@+id/video_edit_samplerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video_edit_duration"
        android:text="@string/video_edit_samplerate"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/general_small_text_size"/>
    <TextView
        android:id="@+id/video_edit_track_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video_edit_samplerate"
        android:text="@string/video_edit_track_number"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/general_small_text_size"/>

    <TextView
        android:id="@+id/video_edit_filesize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/video_edit_size"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/general_small_text_size"
        android:layout_below="@+id/video_edit_track_num"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/video_edit_input_header_edtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video_edit_filesize"
        android:hint="@string/video_edit_header_cut"
        android:textColorHint="@color/black_overlay"
        android:textColor="@color/colorAccent"
        android:inputType="numberDecimal"
        android:textSize="@dimen/general_middle_text_size"/>

    <EditText
        android:id="@+id/video_edit_input_tail_edtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video_edit_input_header_edtv"
        android:hint="@string/video_edit_tail_cut"
        android:textColorHint="@color/black_overlay"
        android:textColor="@color/colorAccent"
        android:inputType="numberDecimal"
        android:textSize="@dimen/general_middle_text_size"/>


</RelativeLayout>
